# forgeorm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  sanity_check.py
forgeorm/: __init__.py
forgeorm/adapters/: base.py  postgres_adapter.py  sqlite_adapter.py
forgeorm/cli/: demo.py  test_engine_switch.py
forgeorm/config/: settings.py
forgeorm/core/: adapter_loader.py  base_model.py  db_manager.py  fields.py  query_builder.py
forgeorm/models/: demo_model.py
tests/: test_crud_operations.py  test_field_meta.py  test_insertion.py  test_model_init__.py  test_quering.py
